# QI-generator

./: .gitignore  README.md  content_1_psy_medmalade_OIC-001-02-A_20250828_074603.json  content_1_psy_medmalade_OIC-001-03-A_20250828_074834.json  content_1_psy_medmalade_OIC-001-04-A_20250828_075106.json  content_1_psy_medmalade_OIC-001-07-A_20250828_075831.json  content_1_psy_medmalade_OIC-001-09-A_20250828_080329.json  content_227_vascu_IVeinC_OIC-227-01-A_20250825_073141.json  content_227_vascu_IVeinC_OIC-227-02-B_20250825_074640.json  content_227_vascu_IVeinC_OIC-227-03-A_20250825_073412.json  content_227_vascu_IVeinC_OIC-227-04-B_20250825_074911.json  content_227_vascu_IVeinC_OIC-227-06-B_20250825_075141.json  content_227_vascu_IVeinC_OIC-227-07-A_20250825_073909.json  content_227_vascu_IVeinC_OIC-227-08-A_20250825_074139.json  content_227_vascu_IVeinC_OIC-227-09-A_20250825_074410.json  content_227_vascu_IVeinC_OIC-227-10-B_20250825_075412.json  content_228_vascu_ulcere_OIC-228-01-A_20250825_075642.json  content_228_vascu_ulcere_OIC-228-02-A_20250825_075913.json  content_228_vascu_ulcere_OIC-228-03-B_20250825_081916.json  content_228_vascu_ulcere_OIC-228-04-A_20250825_080143.json  content_228_vascu_ulcere_OIC-228-05-A_20250825_080413.json  content_228_vascu_ulcere_OIC-228-06-B_20250825_082147.json  content_228_vascu_ulcere_OIC-228-08-B_20250825_082644.json  content_228_vascu_ulcere_OIC-228-09-B_20250825_082914.json  content_228_vascu_ulcere_OIC-228-10-A_20250825_080644.json  content_228_vascu_ulcere_OIC-228-11-A_20250825_080914.json  (+1769 more)
lisa/: 1.json  10.json  100.json  (+364 more)
(+2743 files in other folders)
